# blog-rs

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  routes.rs
static/: style.css
templates/: base.html  index.html  new_post.html  post.html
