[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
askama = "0.12"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
